Added geocoding to get location

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="location">
-    <h1 class="location-timezone">Time zone</h1>
+    <h1 class="location-timezone">{{ city }}, {{ region }}, {{ country }}</h1>
     <p>Icon</p>
 
 </div>
