--- a/templates/weather.html
+++ b/templates/weather.html
@@ -8,7 +8,7 @@
 </div>
 <div class="temperature">
     <div class="degree-section">
-        <h2 class="degree">34</h2>
+        <h2 class="degree">{{ temp }}</h2>
         <span>C</span>
     </div>
     <div class="temperature-description">It's hot out!</div>
