Add heroku deployment requirements

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -11,6 +11,6 @@
         <h2 class="degree">{{ temp }}</h2>
         <span>C</span>
     </div>
-    <div class="temperature-description">It's hot out!</div>
+    <div class="temperature-description">{{ description }}</div>
 </div>
 {% endblock %}
