Add tool to find user ip

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -10,6 +10,7 @@
     <div class="degree-section">
         <h2 class="degree">{{ temp }}</h2>
         <span>C</span>
+        <span>{{ ip }}</span>
     </div>
     <div class="temperature-description">{{ description }}</div>
 </div>
