--- a/templates/weather.html
+++ b/templates/weather.html
@@ -14,4 +14,49 @@
     </div>
     <div class="temperature-description">{{ description }}</div>
 </div>
+<script type="text/javascript">
+    window.addEventListener('load', ()=> {
+let long;
+let lat;
+let temperatureDescription = document.querySelector('.temperature-description');
+let temperatureDegree = document.querySelector('.degree');
+let locationTimezone = document.querySelector('.location-timezone');
+
+if(navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition
+    (position => {
+        console.log(position);
+        long = position.coords.longitude;
+        lat = position.coords.latitude;
+
+        $.get( "https://maps.googleapis.com/maps/api/geocode/json?latlng="+ position.coords.latitude + "," + position.coords.longitude +"&sensor=false&key={{ api_key }}", function(gmaps) {
+                console.log(gmaps);
+                var user_city = gmaps.results[6].formatted_address;
+                console.log(user_city);
+                locationTimezone.textContent = user_city;
+        })
+                
+    
+        // Call to the weather API with lat and long added to api address. 
+        const api = `https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/${lat}%2C%20${long}?unitGroup=metric&key={{ weather_key }}&contentType=json`
+        
+
+        fetch(api)
+            .then(response => {
+                return response.json();
+            })
+            .then(data => {
+                console.log(data);
+                const {temp, conditions} = data.currentConditions;
+
+                // Set dom elements from json data
+                temperatureDegree.textContent = Math.round(temp); 
+                temperatureDescription.textContent = data.description;
+                
+            });
+    });
+
+}
+});
+</script>
 {% endblock %}
