--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css">
-    
+    <link rel="icon" type="image/x-icon"
+        href="https://res.cloudinary.com/dyxe4g62g/image/upload/v1647108628/favicon_ursbbs.png">
+
     <title>Weather App</title>
 </head>
+
 <body>
     {% block content %}
     {% endblock %}
-    
 
-
-
-    
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='js/skycons.js')}}"></script>
 </body>
+
 </html>
