--- a/templates/weather.html
+++ b/templates/weather.html
@@ -13,26 +13,29 @@
     </div>
     <div class="temperature-description"></div>
 </div>
+
+    <!-- Script to make the API calls and add the data to the html elements -->
 <script type="text/javascript">
     window.addEventListener('load', () => {
+        // Variables
         let long;
         let lat;
         let temperatureDescription = document.querySelector('.temperature-description');
         let temperatureDegree = document.querySelector('.degree');
         let locationTimezone = document.querySelector('.location-timezone');
 
+        // Get location data from the browser
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(position => {
                 long = position.coords.longitude;
                 lat = position.coords.latitude;
 
+                // Resolve the coordinates to a city name via Google Maps
                 $.get("https://maps.googleapis.com/maps/api/geocode/json?latlng=" + position.coords
                     .latitude + "," + position.coords.longitude + "&sensor=false&key={{ api_key }}",
                     function (gmaps) {
                         var user_city = gmaps.results[6].formatted_address;
                         locationTimezone.textContent = user_city;
-                        console.log(gmaps.results[6].formatted_address);
-                        console.log(gmaps);
                     })
 
 
@@ -40,7 +43,7 @@
                 const api =
                     `https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/${lat}%2C%20${long}?unitGroup=metric&key={{ weather_key }}&contentType=json`
 
-
+                // Fetch request from the API which returns the response in JSON format    
                 fetch(api)
                     .then(response => {
                         return response.json();
@@ -55,13 +58,13 @@
                         // Set dom elements from json data
                         temperatureDegree.textContent = Math.round(temp);
                         temperatureDescription.textContent = data.description;
-                        // Set icon
+                        // Set icon from Skycons function
                         setIcons(icon, document.querySelector('.icon'));
                     });
             });
 
         }
-
+        // Setup Skycons to be used with api icon data
         function setIcons(icon, iconID) {
             const skycons = new Skycons({
                 'color': 'white'
